revive player afteer death

--- a/sqjs.html
+++ b/sqjs.html
@@ -20,6 +20,6 @@
 	
 </head>
 <body>
-	<canvas id="scene" width="600" height="600">Sorry, but it seems your browser is too old! Try IE9+, Firefox, Chrome or Opera</canvas>
+	<canvas id="scene" width="600" height="600">Sorry, but it seems your browser is too old! Try IE 9+, Firefox 3.5+, Chrome or Opera 10.5+</canvas>
 </body>
 </html>
