player and enemy classes

--- a/sqjs.html
+++ b/sqjs.html
@@ -11,6 +11,8 @@
 
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
+	<script type="text/javascript" src="js/player.js"></script>
+	<script type="text/javascript" src="js/enemy.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>
 	
 	<!--<link type="text/css" href="http://reset5.googlecode.com/hg/reset.min.css" rel="stylesheet" media="all" />-->
