--- a/sqjs.html
+++ b/sqjs.html
@@ -11,6 +11,9 @@
 
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
+	<script type="text/javascript" src="js/behaviours/fire.js"></script>
+	<script type="text/javascript" src="js/behaviours/interaction.js"></script>
+	<script type="text/javascript" src="js/behaviours/moveDirection.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>
