combine behaviours, wavegenerator configurable

--- a/sqjs.html
+++ b/sqjs.html
@@ -11,11 +11,11 @@
 
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
-	<script type="text/javascript" src="js/behaviours/fire.js"></script>
-	<script type="text/javascript" src="js/behaviours/interaction.js"></script>
-	<script type="text/javascript" src="js/behaviours/moveDirection.js"></script>
+	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
+	<script type="text/javascript" src="js/waveGenerator.js"></script>
+	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>
 	
 	<!--<link type="text/css" href="http://reset5.googlecode.com/hg/reset.min.css" rel="stylesheet" media="all" />-->
