--- a/sqjs.html
+++ b/sqjs.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>sq.js</title>
-	
+
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	
+
 	<!--<script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
 	<script type="text/javascript" src="lib/jquery.js"></script>
 	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
@@ -14,15 +14,16 @@
 	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
-	<script type="text/javascript" src="js/waveGenerator.js"></script>
+	<script type="text/javascript" src="js/simpleWave.js"></script>
+	<script type="text/javascript" src="js/typedWave.js"></script>
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>
-	
+
 	<!--<link type="text/css" href="http://reset5.googlecode.com/hg/reset.min.css" rel="stylesheet" media="all" />-->
 	<link type="text/css" href="lib/reset.css" rel="stylesheet" media="all" />
-	
+
 	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
-	
+
 </head>
 <body>
 	<canvas id="scene" width="600" height="600">Sorry, but it seems your browser is too old! Try IE 9+, Firefox 3.5+, Chrome or Opera 10.5+</canvas>
