split player and enemy behaviour

--- a/sqjs.html
+++ b/sqjs.html
@@ -11,6 +11,7 @@
 
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
+	<script type="text/javascript" src="js/playerBehaviour.js"></script>
 	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
