--- a/sqjs.html
+++ b/sqjs.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/playerBehaviour.js"></script>
 	<script type="text/javascript" src="js/typedWave.js"></script>
+	<script type="text/javascript" src="js/hiScore.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>
 
 	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
