--- a/sqjs.html
+++ b/sqjs.html
@@ -9,6 +9,7 @@
 	<!--<script type="text/javascript" src="lib/jquery.js"></script>-->
 	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 
+	<script type="text/javascript" src="js/audioPlayer.js"></script>
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
 	<script type="text/javascript" src="js/behaviour.js"></script>
