--- a/sqjs.html
+++ b/sqjs.html
@@ -43,5 +43,13 @@
 		<div class="button" id="back">Back</div>
 	</div>
 	<a href="https://github.com/luiges90/sqjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+	<audio src="sound/bulletDestroy.ogg" class="soundbulletDestroyogg ended"></audio>
+	<audio src="sound/destroy.ogg" class="sounddestroyogg ended"></audio>
+	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
+	<audio src="sound/hit.ogg" class="soundhitogg ended"></audio>
+	<audio src="sound/playerDestroy.ogg" class="soundplayerDestroyogg ended"></audio>
+	<audio src="sound/playerFire.ogg" class="soundplayerFireogg ended"></audio>
+	<audio src="sound/powerup.ogg" class="soundpowerupogg ended"></audio>
+	<audio src="sound/teleport.ogg" class="soundteleportogg ended"></audio>
 </body>
 </html>
