--- a/sqjs.html
+++ b/sqjs.html
@@ -40,7 +40,10 @@
 			<table id="hiscore-table">
 			</table>
 		</div>
-		<div class="button" id="back">Back</div>
+		<div class="button-container">
+			<div class="button" id="back">Back</div>
+			<div class="button" id="clear">Clear</div>
+		</div>
 	</div>
 	<a href="https://github.com/luiges90/sqjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	<audio src="sound/bulletDestroy.ogg" class="soundbulletDestroyogg ended"></audio>
