--- a/sqjs.html
+++ b/sqjs.html
@@ -36,13 +36,13 @@
 	<div class="scene" id="instruction-scene">
 	</div>
 	<div class="scene" id="hiscore-scene">
-		<div id="table-container">
-			<table id="hiscore-table">
+		<div class="table-container">
+			<table class="hiscore-table">
 			</table>
 		</div>
 		<div class="button-container">
-			<div class="button" id="back">Back</div>
-			<div class="button" id="clear">Clear</div>
+			<div class="button back">Back</div>
+			<div class="button clear">Clear</div>
 		</div>
 	</div>
 	<a href="https://github.com/luiges90/sqjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
