disable context menu

--- a/sqjs.html
+++ b/sqjs.html
@@ -21,7 +21,7 @@
 	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
 
 </head>
-<body>
+<body oncontextmenu="return false">
 	<canvas id="game-scene" class="scene" width="600" height="600">Sorry, but it seems your browser is really old! Try IE 9+, Firefox 3.5+, Chrome or Opera 10.5+</canvas>
 	<div class="scene" id="start-scene" style="display: block">
 		<div id="title">
