deploy grunt, prod mode

--- a/sqjs.html
+++ b/sqjs.html
@@ -9,16 +9,19 @@
 	<!--<script type="text/javascript" src="lib/jquery.js"></script>-->
 	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 
-	<script type="text/javascript" src="js/audioPlayer.js"></script>
+	<!--<script type="text/javascript" src="js/audioPlayer.js"></script>
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
 	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/playerBehaviour.js"></script>
 	<script type="text/javascript" src="js/typedWave.js"></script>
 	<script type="text/javascript" src="js/hiScore.js"></script>
-	<script type="text/javascript" src="js/sq.js"></script>
+	<script type="text/javascript" src="js/sq.js"></script>-->
 
-	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
+	<!--<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />-->
+	
+	<script type="text/javascript" src="dist/sqjs.min.js"></script>
+	<link type="text/css" href="dist/sqjs.min.css" rel="stylesheet" media="all" />
 
 </head>
 <body oncontextmenu="return false">
