--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<!--<script type="text/javascript" src="lib/jquery.js"></script>-->
 	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
+	
+	<script type="text/javascript" src="sq.min.js"></script>
+	<link type="text/css" href="sq.min.css" rel="stylesheet" media="all" />
 
-	<!--<script type="text/javascript" src="js/audioPlayer.js"></script>
+	<!--
+	<script type="text/javascript" src="lib/jquery.js"></script>
+	
+	<script type="text/javascript" src="js/audioPlayer.js"></script>
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
 	<script type="text/javascript" src="js/entity.js"></script>
 	<script type="text/javascript" src="js/behaviour.js"></script>
 	<script type="text/javascript" src="js/playerBehaviour.js"></script>
 	<script type="text/javascript" src="js/typedWave.js"></script>
 	<script type="text/javascript" src="js/hiScore.js"></script>
-	<script type="text/javascript" src="js/sq.js"></script>-->
+	<script type="text/javascript" src="js/sq.js"></script>-
 
-	<!--<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />-->
+	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />-->
 	
-	<script type="text/javascript" src="dist/sqjs.min.js"></script>
-	<link type="text/css" href="dist/sqjs.min.css" rel="stylesheet" media="all" />
-
 </head>
 <body oncontextmenu="return false">
 	<canvas id="game-scene" class="scene" width="600" height="600">Sorry, but it seems your browser is really old! Try IE 9+, Firefox 3.5+, Chrome or Opera 10.5+</canvas>
@@ -51,6 +53,10 @@
 	<a href="https://github.com/luiges90/sqjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	<audio src="sound/bulletDestroy.ogg" class="soundbulletDestroyogg ended"></audio>
 	<audio src="sound/destroy.ogg" class="sounddestroyogg ended"></audio>
+	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
+	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
+	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
+	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
 	<audio src="sound/fire.ogg" class="soundfireogg ended"></audio>
 	<audio src="sound/hit.ogg" class="soundhitogg ended"></audio>
 	<audio src="sound/playerDestroy.ogg" class="soundplayerDestroyogg ended"></audio>
