--- a/sqjs.html
+++ b/sqjs.html
@@ -5,14 +5,9 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
-	
-	<script type="text/javascript" src="sq.min.js"></script>
-	<link type="text/css" href="sq.min.css" rel="stylesheet" media="all" />
-
-	<!--
+	<!-- build:include prod-include.html -->
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<link type="text/css" href="lib/reset.css" rel="stylesheet" media="all" />
 	
 	<script type="text/javascript" src="js/audioPlayer.js"></script>
 	<script type="text/javascript" src="js/box2dHelper.js"></script>
@@ -23,7 +18,8 @@
 	<script type="text/javascript" src="js/hiScore.js"></script>
 	<script type="text/javascript" src="js/sq.js"></script>-
 
-	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />-->
+	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
+	<!-- /build -->
 	
 </head>
 <body oncontextmenu="return false">
