--- a/sqjs.html
+++ b/sqjs.html
@@ -7,6 +7,7 @@
 
 	<!-- build:include prod-include.html -->
 	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="lib/Box2dWeb-2.1.a.3.min.js"></script>
 	<link type="text/css" href="lib/reset.css" rel="stylesheet" media="all" />
 	
 	<script type="text/javascript" src="js/audioPlayer.js"></script>
@@ -16,7 +17,7 @@
 	<script type="text/javascript" src="js/playerBehaviour.js"></script>
 	<script type="text/javascript" src="js/typedWave.js"></script>
 	<script type="text/javascript" src="js/hiScore.js"></script>
-	<script type="text/javascript" src="js/sq.js"></script>-
+	<script type="text/javascript" src="js/sq.js"></script>
 
 	<link type="text/css" href="css/base.css" rel="stylesheet" media="all" />
 	<!-- /build -->
