add ga include comment

--- a/sqjs.html
+++ b/sqjs.html
@@ -58,5 +58,6 @@
 	<audio src="sound/playerFire.ogg" class="soundplayerFireogg ended"></audio>
 	<audio src="sound/powerup.ogg" class="soundpowerupogg ended"></audio>
 	<audio src="sound/teleport.ogg" class="soundteleportogg ended"></audio>
+	<!-- build:include ../ga.html --><!-- /build -->
 </body>
 </html>
