--- a/sqjs.html
+++ b/sqjs.html
@@ -27,7 +27,7 @@
 	<canvas id="game-scene" class="scene" width="600" height="600">Sorry, but it seems your browser is really old! Try IE 9+, Firefox 3.5+, Chrome or Opera 10.5+</canvas>
 	<div class="scene" id="start-scene" style="display: block">
 		<div id="title">
-			<img src="img/title.png">
+			<img src="img/title.png" alt="sq title image">
 		</div>
 		<div id="buttons">
 			<div class="button" id="start">Start</div>
