--- a/sqjs.html
+++ b/sqjs.html
@@ -57,6 +57,7 @@
 	<audio src="sound/playerFire.ogg" class="soundplayerFireogg ended"></audio>
 	<audio src="sound/powerup.ogg" class="soundpowerupogg ended"></audio>
 	<audio src="sound/teleport.ogg" class="soundteleportogg ended"></audio>
+	<a href="https://github.com/luiges90/sqjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 	<!-- build:include ../ga.html --><!-- /build -->
 </body>
 </html>
